; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_set_image_params.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_set_image_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_csp_params = type { i32 }
%struct.mp_image_params = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_csp_set_image_params(%struct.mp_csp_params* %0, %struct.mp_image_params* %1) #0 {
  %3 = alloca %struct.mp_csp_params*, align 8
  %4 = alloca %struct.mp_image_params*, align 8
  %5 = alloca %struct.mp_image_params, align 4
  store %struct.mp_csp_params* %0, %struct.mp_csp_params** %3, align 8
  store %struct.mp_image_params* %1, %struct.mp_image_params** %4, align 8
  %6 = load %struct.mp_image_params*, %struct.mp_image_params** %4, align 8
  %7 = bitcast %struct.mp_image_params* %5 to i8*
  %8 = bitcast %struct.mp_image_params* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 %8, i64 4, i1 false)
  %9 = call i32 @mp_image_params_guess_csp(%struct.mp_image_params* %5)
  %10 = getelementptr inbounds %struct.mp_image_params, %struct.mp_image_params* %5, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.mp_csp_params*, %struct.mp_csp_params** %3, align 8
  %13 = getelementptr inbounds %struct.mp_csp_params, %struct.mp_csp_params* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @mp_image_params_guess_csp(%struct.mp_image_params*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
